kube/dev/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
spec:
  rules:
  - host: dev
    http:
      paths:
      - path: /
        backend:
          serviceName: kmcli
          servicePort: 80
